--- a/index.html
+++ b/index.html
@@ -2,10 +2,64 @@
 <html>
     <head>
 	    <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css"/>
 	    <title>My First Website</title>
     </head>
+    
+      <!--how to out your header to align in the centre-->
     <body>
-        <li>My name is Saviour</li>
-        <p>And I love having hardworking people around me</p>
+        <a href="Link.html">linkpage</a>
+        <h1>My name is Saviour</h1>
+      <!-- <p>I love having hardworking people around me</p>--> 
+        <p>Living Life Believing</p>
+<!--  <ul>
+    Unordered List
+  <li>Pizza</li>
+  <li>Bread</li>
+  <li>Crisps</li>
+</ul>
+<p>The steps to follow to make toast are:</p>
+<ol>
+    ordered List
+  <li>Get 2 slices of bread</li>
+  <li>Put the bread in the toaster</li>
+  <li>Press the toaster down</li>
+</ol>
+-->
+  <h2>Lets learn more about me</h2>
+  <p>My Hobbies</p>
+<ul>
+    <li>I Like to pick up task that are changeling</li>
+    <li>I like listening to great ideals people are ready to share</li>
+    <li>I don't like noisy environment</li>
+    <li>Love spending time with my family</li>
+</ul>
+<h3>Top 3 ways about how I approach Life</h3>
+<ol>
+    <li>I put God First in every step i take</li>
+    <li>I honestly believe that every little hard work will eventually pay off</li>
+    <li>Fear not, just be bold </li>
+</ol>
+<img src="img/Blackgirl.jpg" alt="my Black girl">
+<table>
+    <table>
+       <caption>Names of black girls</caption> 
+        <tr>
+          <th>First name</th>
+          <th>Last name</th>
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>Saviour</td>
+          <td>Imode</td>
+          <td>6years</td>
+        </tr>
+        <tr>
+          <td>Faith</td>
+          <td>Iwu</td>
+          <td>10years</td>
+        </tr>
+      </table>
+</table>
     </body>
 </html>
