--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     </section>
     
-    <section id="contactt">
+    <section id="contact">
         <h1 class="headings">CONTACT</h1>
         <form action="" class="form">
            <input type="text" name="name" class="input" placeholder="Enter Your Name">
