--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    <input type="submit" value="SEND" id="send">
 </form>
 </section>
-<!-- <script src="./main.js"></script> -->
+<script src="./main.js"></script> 
  
 </body>
 </html> 
